# GraphicLib

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini
Examples/: CMakeLists.txt
Examples/Common/Window/Private/: Input.cpp  InputImpl.cpp  InputImpl.h  InputImplUtils.cpp  InputImplUtils.h  Window.cpp
Examples/Common/Window/Private/OpenGLImpl/: WindowImpl.cpp  WindowImpl.h  glad.h
Examples/Common/Window/Private/Utils/: InputUtils.cpp
Examples/Common/Window/Public/: Window.h
Examples/Common/Window/Public/Utils/: CallbackHandler.h  InputUtils.h
Examples/Common/Window/Public/Window/: Input.h  Window.h
Examples/DrawImage/: CMakeLists.txt  imgui.ini  main.cpp
Examples/DrawImage/Resources/: Grid.fragment  Grid.vertex  Texture.fragment  Texture.vertex
Examples/Vendors/: CMakeLists.txt
Examples/Vendors/glad/include/glad/: glad.h
Source/: CMakeLists.txt
Source/Private/: CMakeLists.txt  FmtFormat.h  FrameBuffer.cpp  GL_VertexArray.cpp  GL_VertexBuffer.cpp  IExternalLogSystem.cpp  IExternalLogSystem.h  IndexBuffer.cpp  InternalLogger.cpp  InternalLogger.h  LibInitialise.cpp  Logger.cpp  Mesh.cpp  Model3D.cpp  RenderBuffer.cpp  Shader.cpp  StbImage.h  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
Source/Private/OpenGLImpl/: APIImpl.cpp  APIImpl.h  CMakeLists.txt  FrameBufferImpl.cpp  FrameBufferImpl.h  GLFWLogSystem.cpp  GLFWLogSystem.h  IndexBufferImpl.cpp  IndexBufferImpl.h  IndexBufferOpsImpl.cpp  IndexBufferOpsImpl.h  OpenGLLogSystem.cpp  OpenGLLogSystem.h  RenderBufferImpl.cpp  RenderBufferImpl.h  ShaderImpl.cpp  ShaderImpl.h  TextureImpl.cpp  TextureImpl.h  VertexArrayImpl.cpp  VertexArrayImpl.h  VertexArrayOpsImpl.cpp  VertexArrayOpsImpl.h  VertexBufferImpl.cpp  VertexBufferImpl.h  VertexBufferOpsImpl.cpp  VertexBufferOpsImpl.h  WindowImpl.cpp  WindowImpl.h  glfw.h
Source/Private/OpenGLImpl/Utils/: RenderBufferImplUtils.cpp  RenderBufferImplUtils.h  ShaderImplUtils.cpp  ShaderImplUtils.h  TextureImplUtils.cpp  TextureImplUtils.h
Source/Private/OpenGLImpl/Vendors/glad/: CMakeLists.txt
Source/Private/OpenGLImpl/Vendors/glad/include/KHR/: khrplatform.h
Source/Private/OpenGLImpl/Vendors/glad/include/glad/: glad.h
Source/Private/OpenGLImpl/Vendors/glad/src/: glad.c
Source/Private/Utilities/: Model3dUtils.cpp  RenderBufferUtils.cpp  ShaderUtils.cpp  Singleton.h  TextureUtils.cpp  UniqueIdentifier.cpp
Source/Private/Vendors/: CMakeLists.txt
Source/Private/Vendors/assimp/: CMakeLists.txt
Source/Public/GraphicLib/: DLL_API.h  FrameBuffer.h  GL_VertexArray.h  GL_VertexBuffer.h  IndexBuffer.h  LibInitialise.h  Logger.h  Mesh.h  Model3D.h  RenderBuffer.h  Shader.h  Storage.h  Texture.h  VertexArray.h  VertexBuffer.h  Window.h
Source/Public/GraphicLib/Utilities/: Array.h  Model3dUtils.h  RenderBufferUtils.h  ShaderUtils.h  Span.h  StackArray.h  TextureUtils.h  UniqueIdentifier.h
Tests/: CMakeLists.txt  VertexBufferTests.cpp  VertexBufferTests.h  main.cpp
